--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <header>
-        <nav>
-            <a href="">Home</a>
-            <a href="About.html">About</a>
-            <a href="Social Media.html">Social-Media</a>
-            <a href="Kontakt.html">Kontakt</a>
+        <nav class="navbar">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">Über-mich</a></li>
+            <li><a href="/blog.html">Blog</a></li>
+            <li><a href="/kontakt.html">Kontakt</a></li>
+          </ul>
         </nav>
     </header>
   </body>
