--- a/index.html
+++ b/index.html
@@ -20,4 +20,8 @@
     </header>
   </body>
   <h1>Herzlich Willkommen auf meinem Blog!</h1>
+  <footer>
+    <p>Erstellt von: Olga</p>
+    <br>© Alle Rechte vorbehalten
+  </footer>
 </html>
