--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,19 +9,19 @@
   </head>
   <body>
     <header>
-        <nav class="navbar">
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">Über-mich</a></li>
-            <li><a href="/blog.html">Blog</a></li>
-            <li><a href="/kontakt.html">Kontakt</a></li>
-          </ul>
-        </nav>
+      <nav class="navbar">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/About.html">Über-mich</a></li>
+          <li><a href="/blog.html">Blog</a></li>
+          <li><a href="/kontakt.html">Kontakt</a></li>
+        </ul>
+      </nav>
     </header>
   </body>
   <h1>Herzlich Willkommen auf meinem Blog!</h1>
   <footer>
     <p>Erstellt von: Olga</p>
-    <br>© Alle Rechte vorbehalten
+    <br />© Alle Rechte vorbehalten
   </footer>
 </html>
